--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1250,52 +1250,64 @@ quitter_la_maison:
     target:
       entity_id: input_select.modes_de_presence_de_la_maison_v2
     enabled: true
-  description: ''
+  description: Passer la maison en mode "Départ en cours". A utiliser lorsque je suis
+    sur le point de quitter mon domicile.
   icon: mdi:home-export-outline
-recuperer_previsions_meteorologiques_horaires:
-  alias: Récupérer prévisions météorologiques horaires
+  fields: {}
+recuperer_previsions_meteorologiques:
+  alias: Récupérer prévisions météorologiques
   sequence:
   - action: weather.get_forecasts
     target:
       entity_id:
       - weather.floirac
     data:
-      type: hourly
+      type: '{{frequency}}'
     response_variable: result
   - stop: ''
     response_variable: result
-  description: Récupérer les prévisions météorologiques horaires a mon domicile
+  description: Récupérer les prévisions météorologiques a mon domicile
   icon: mdi:weather-cloudy
-recuperer_previsions_meteorologiques_journalieres:
-  alias: Récupérer prévisions météorologiques journalières
-  sequence:
-  - action: weather.get_forecasts
-    target:
-      entity_id:
-      - weather.floirac
-    data:
-      type: daily
-    response_variable: result
-  - stop: ''
-    response_variable: result
-  description: Récupérer les prévisions météorologiques journalières a mon domicile
-  icon: mdi:weather-cloudy
+  fields:
+    frequency:
+      selector:
+        select:
+          options:
+          - value: daily
+            label: Journalière
+          - value: hourly
+            label: Horaire
+      name: Fréquence
+      required: true
+      description: Fréquence des prévisions. Une par heure ou une par jour.
 recuperer_reunions_professionnelles:
-  alias: 'Récupérer Réunions Professionnelles  '
+  alias: 'Récupérer Réunions Professionnelles '
   sequence:
   - action: calendar.get_events
     target:
       entity_id:
       - calendar.nabucasa_calendar_personal
-    data_template:
-      start_date_time: '{{ today_at(''00:00'') }}'
-      duration:
-        hours: 48
     response_variable: result
+    data:
+      start_date_time: '{{start_date}}'
+      end_date_time: '{{end_date}}'
   - stop: ''
     response_variable: result
   description: Récupérer les réunions depuis mon calendrier professionnel
   icon: mdi:laptop-account
+  fields:
+    start_date:
+      selector:
+        datetime: {}
+      name: Date de début
+      description: Date et heure de début
+      required: true
+    end_date:
+      selector:
+        datetime: {}
+      name: Date de fin
+      required: true
+      description: Date et heure de fin
 recuperer_liste_de_course:
   alias: Récupérer liste de course
   sequence:
