--- a/automations.yaml
+++ b/automations.yaml
@@ -2158,9 +2158,11 @@
         state: 'on'
       - condition: or
         conditions:
-        - condition: state
-          entity_id: input_select.modes_de_presence_de_la_maison_v2
-          state: Occupée
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: input_select.modes_de_presence_de_la_maison_v2
+            state: Vide
         - condition: state
           entity_id: input_boolean.guest_mode
           state: 'on'
@@ -2238,9 +2240,11 @@
         state: 'on'
       - condition: or
         conditions:
-        - condition: state
-          entity_id: input_select.modes_de_presence_de_la_maison_v2
-          state: Occupée
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: input_select.modes_de_presence_de_la_maison_v2
+            state: Vide
         - condition: state
           entity_id: input_boolean.guest_mode
           state: 'on'
@@ -2319,9 +2323,11 @@
           seconds: 0
       - condition: or
         conditions:
-        - condition: state
-          entity_id: input_select.modes_de_presence_de_la_maison_v2
-          state: Occupée
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: input_select.modes_de_presence_de_la_maison_v2
+            state: Vide
         - condition: state
           entity_id: input_boolean.guest_mode
           state: 'on'
@@ -2399,9 +2405,11 @@
           seconds: 0
       - condition: or
         conditions:
-        - condition: state
-          entity_id: input_select.modes_de_presence_de_la_maison_v2
-          state: Occupée
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: input_select.modes_de_presence_de_la_maison_v2
+            state: Vide
         - condition: state
           entity_id: input_boolean.guest_mode
           state: 'on'
@@ -3439,9 +3447,11 @@
         state: 'on'
       - condition: or
         conditions:
-        - condition: state
-          entity_id: input_select.modes_de_presence_de_la_maison_v2
-          state: Occupée
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: input_select.modes_de_presence_de_la_maison_v2
+            state: Vide
         - condition: state
           entity_id: input_boolean.guest_mode
           state: 'on'
@@ -3508,9 +3518,11 @@
         state: 'on'
       - condition: or
         conditions:
-        - condition: state
-          entity_id: input_select.modes_de_presence_de_la_maison_v2
-          state: Occupée
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: input_select.modes_de_presence_de_la_maison_v2
+            state: Vide
         - condition: state
           entity_id: input_boolean.guest_mode
           state: 'on'
